manifiestos/frontend_service_manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-sesiones-service
  namespace: mdpvfrontend-ns
spec:
  selector:
    app: frontend-sesiones-deployment
  ports:
    - name: ms-port
      protocol: TCP
      port: 80
      targetPort: 80
