manifiestos/frontend_ingress_manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-sesiones-ingress
  namespace: mdpvfrontend-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.mdpvfrontend.host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-sesiones-service
                port:
                  number: 80
